version 1.1 final solved the HostServices problem by changing the method that opens the .pdf files