@@ -77,6 +77,11 @@
                     <version>2.0.30</version>
                         <type>jar</type>
                 </dependency>
+                <dependency>
+                    <groupId>org.openjfx</groupId>
+                    <artifactId>javafx-maven-plugin</artifactId>
+                    <version>0.0.8</version>
+                </dependency>
 	</dependencies>
 
 	<build>
@@ -93,6 +98,26 @@
 					</excludes>
 				</configuration>
 			</plugin>
+                        <plugin>
+                            <groupId>org.openjfx</groupId>
+                            <artifactId>javafx-maven-plugin</artifactId>
+                            <version>0.0.8</version>
+                            <configuration>
+                                <mainClass>com.ebernet.bomberos_socios.JavaFXApplication</mainClass>
+                                <jlnkAppOutputInPlaceBehavior>replaceSelf</jlnkAppOutputInPlaceBehavior>
+                                <jlnkGenerateJNLP>false</jlnkGenerateJNLP>
+                            </configuration>
+                            <executions>
+                                <execution>
+                                    <id>default-cli</id>
+                                    <configuration>
+                                        <options>
+                                            <option>--add-modules=javafx.controls,javafx.fxml,javafx.base,javafx.graphics</option>
+                                        </options>
+                                    </configuration>
+                                </execution>
+                            </executions>
+                        </plugin>
 		</plugins>
 	</build>
 
